-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.643 2009-10-11 22:04:30 guru Exp $
-----------------------------------------------------------------------------------------
2009-10-11
	* misc/kml2gmt.c:	Mix of fopen and GMT_fclose not good under Windoze

2009-10-09
	* gmtinit.c:		If GMT_DATADIR was set to a list of colon-separated dirs
				then then init failed since we tried to check access as
				if GMT_DATADIR was always a single entity (as in the past).
2009-10-06
	* gmt2kml.c:		Removed additional > in </ExtendedData>>.

2009-10-04	pwessel
	* gmt_init.c:		Opened file with fopen but closed with GMT_fclose.
	* gmt_mgg_header2.c:	Opened file with GMT_fopen but closed with fclose.

2009-10-03	pwessel		
				GMT 5 branch tag set: GMT5_branch

2009-10-01	pwessel
	* psrose.c:		Needed to set scale to 1 so the bounding box
				calculations would be correct for EPS output.

2009-10-01	remko
	* explain_-J*.txt:	Added necessary / after -Jpoly
	* misc/gmt2kml.c:	Removed rogue \n before </coordinates>\n.

2009-09-29	pwessel
	* install_gmt:		GDAL setup had bad variable name $enable-gdal that
				was meant to be $enable_gdal, and a bad if-test.

2009-09-28	jluis
	* x2sys/x2sys_merge.c:	Improved updating algorithm for detected cases where
				where it was failing badly.

2009-09-27	pwessel
	* gmt_init.c:		Bug in the parsing of -Jg<lon>/<lat>/<radius>/<lat>.
	* spotter/backtracker.c:	When -L is set, -mo must be turned on automatically
					even if -m is not set.
	
2009-09-25	pwessel
	* gmtconvert.c:		The -S option failed for actual matches; the 2009/5/26
				change screwed that up.  Now fixed and tested.
	* spotter/rotconverter.c:	New option -E to reduce stage pole opening
					angles by <fact> [0.5] (to get half-spreading rates)

2009-09-24	pwessel
	* gmt_grdio.c:		GMT_read_img did not apply swab if little-endian arch.

2009-09-24	remko
	* configure.ac:		Fixed bug with -rpath

2009-09-22	pwessel